# aes-pipe

./: .gitignore  ChangeLog  README  configure.ac
src/: Makefile.am  aes-pipe.c
test/: 128_1.sh  128_4096.sh  128_4097.sh  192_1.sh  192_4096.sh  192_4097.sh  256_1.sh  256_4096.sh  256_4097.sh  Makefile.am  badkey.sh  test-functions  test.sh
